metadata/force-app/main/default/objects/agf__ADM_Work__c/fields/PRDLAA__DevOpsCenter_Work_Item_Link__c.field-meta.xml
<CustomField>
    <fullName>PRDLAA__DevOpsCenter_Work_Item_Link__c</fullName>
    <description>HYPERLINK(&apos;/sf_devops/DevOpsCenter.app?projectId=&apos;+DevOpsCenter_Work_Item__r.sf_devops__Project__c+&apos;&amp;workItemId=&apos;+DevOpsCenter_Work_Item__r.Id, &apos;DevOps Center Work Item&apos;, &apos;_self&apos;)</description>
    <formula>HYPERLINK(&apos;/sf_devops/DevOpsCenter.app?projectId=&apos;+PRDLAA__DevOpsCenter_Work_Item__r.sf_devops__Project__c+&apos;&amp;workItemId=&apos;+PRDLAA__DevOpsCenter_Work_Item__r.Id, &apos;DevOps Center Work Item&apos;, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DevOpsCenter Work Item Link</label>
    <type>Text</type>
</CustomField>