metadata/force-app/main/default/objects/agf__ADM_Work__c/fields/PRDLAA__DevOpsCenter_Work_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>PRDLAA__DevOpsCenter_Work_Item_Status__c</fullName>
    <description>DevOpsCenter_Work_Item__r.sf_devops__State__c</description>
    <formula>PRDLAA__DevOpsCenter_Work_Item__r.sf_devops__State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DevOpsCenter Work Item Status</label>
    <type>Text</type>
</CustomField>